samples/_failures_safe/1761074806_031b67_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45286b64.c: In function ‘main’:
./samples/SAFE/__tmp_45286b64.c:140:5: error: expected declaration or statement at end of input
  140 |     }
      |     ^
